--- a/todo-app/public/css/styles.css
+++ b/todo-app/public/css/styles.css
@@ -10,3 +10,23 @@ td {
 td {
     text-align: center;
 }
+
+.Todo-Item:hover .trash-icon {
+    display: block;
+    margin-left: 24px;
+}
+
+h5 {
+    display: inline;
+}
+
+.foot {
+    margin-top: 120px;
+}
+
+.count-due-later, .count-due-today, .count-overdue {
+    background: whitesmoke;
+    border-radius: 5px;
+    padding: 5px;
+    margin-left: 10px;
+}
