Fixed h5 and span positions for the test case to succeed

--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -46,14 +46,12 @@
             <!-- include due later todos here -->
             <%- include('todos.ejs', {
                 "todoType": "Due Later", 
-                "id" : "count-due-Later", 
+                "id" : "count-due-later", 
                 "todos" : duelatertodos
             }) %>
 
             <!-- include the page footer -->
-            <%- include('footer.ejs') %>
         </div>
     </div>
 </body>
-
 </html>
