--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -1,30 +1,135 @@
-<div>
-    <h5><%= todoType %></h5>
-    <span id="<%=id%>" class="bg-gray-100 ml-2 px-2"> <%= todos.length %> </span>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="csrf-token" content="<%= csrfToken %>" />
+        <link href="./css/styles.css" rel="stylesheet">
+        <script src="https://cdn.tailwindcss.com"></script>
+        <title>Todo Manager</title>
     
-    <ul class="list-none">
-      <% for (let i = 0; i < todos.length; i++) { %>
-        <li class="Todo-Item">
-            <div class="flex item-center w-fit my-2 px-2 py-1 hover:bg-purple-50 rounded">
-                <input id="todo-checkbox-<%= todos[i].id %>" type="checkbox" 
-                        <%=todos[i].completed ? "checked" : "" %>
-                        onclick="updateTodo(<%= todos[i].id %>)"
-                        class="w-4 h-4 text-blue-600 bg-grey-100 rounded border-grey-600">
-                <label for="todo-checkbox-<%= todos[i].id %>" class="ml-2 text-sm text-grey-600 cursor-pointer ">
-                    <%= todos[i].title %>  
-                </label>
-                <a href="#" 
-                    onclick="deleteTodo(<%= todos[i].id %>)"
-                    class="hidden trash-icon ml-2"
-                >
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="w-4 h-4">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
-                </svg>
-                </a>
+</head>
+    <script>
+
+        const titleInput = document.getElementById("title");
+        const dueDateInput = document.getElementById("dueDate");
+        const todoForm = document.getElementById("todo-form");
+
+        todoForm.addEventListener("submit", (event) => {
+            if (titleInput.value.trim() === "" || dueDateInput.value.trim() === "") {
+            event.preventDefault();
+            alert("Title and dueDate fields are required to be filled");
+            }
+        });
+
+        var token = document
+            .querySelector('meta[name="csrf-token"]')
+            .getAttribute("content")
+        function updateTodo(id) {
+            const status = document.getElementById(`todo-checkbox-${id}`).checked
+            fetch(`/todos/${id}`, {
+                method: "put",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    "_csrf": token,
+                    "completed": status
+                })
+            }).then((res) => {
+                if (res.ok) {
+                    console.log("OKkkkkkkkkkay")
+                    window.location.reload();
+                }
+            }).catch((error) => console.log(error));
+        }
+        function deleteTodo(id) {
+            console.log("Delte invoked")
+            fetch(`/todos/${id}`, {
+                method: "delete",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({
+                    "_csrf": token
+                })
+            }).then((res) => {
+                if (res.ok) {
+                    console.log("Delete OKkkkkkkkkkay")
+                    window.location.reload();
+                }
+            }).catch((error) => console.log(error));
+        }
+      </script>
+      
+</head>
+
+<body>
+   <div class="grid grid-cols-6">
+    <div class="col-start-3 col-span-2">
+
+        <%- include('notifications.ejs')%>
+        <%- include('header.ejs')%>
+
+        <a href="/signout" class="text-blue-500">Signout</a>
+
+        <form action="/todos" method="post" id="todo-form">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>"/>
+            <div class="flex gap-2 py-5">
+                <div class="flex-auto">
+                    <input type="text" name="title" id="todo-title"  placeholder="what's next?" class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm"/>
                 </div>
-            </li>
+                <div class="flex-auto">
+                    <input type="date" name="dueDate" id="todo-due-date" class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm leading-4"/>
+                </div>
+                <div class="flex-none">
+                    <button type="submit" class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2 ">Add</button>
+                </div>
+            </div>  
+        </form>
+
+        <div>
+            <!-- include overdue todos here -->
+            <%- include('todos.ejs', {
+                "todoType": "Overdue" , 
+                "id" : "count-overdue", 
+                "todos" : overduetodos
+            }) %>
+
+            <!-- include due today todos here -->
+            <%- include('todos.ejs', {
+                "todoType": "Due Today", 
+                "id" : "count-due-today" , 
+                "todos" : duetodaytodos
+            }) %>
+
+            <!-- include due later todos here -->
+            <%- include('todos.ejs', {
+                "todoType": "Due Later", 
+                "id" : "count-due-later", 
+                "todos" : duelatertodos
+            }) %>
+
+            <!-- include completed todos here -->
+            <%- include('todos.ejs', {
+                "todoType": "Completed Items", 
+                "id" : "count-completed", 
+                "todos" : completedtodos
+            }) %>
+        </div>
+        
+        <%- include('footer.ejs')%>
+        <% if(messages && messages.error && messages.error.length > 0)  { %>
+        <% for(var i=0; i<messages.error.length; i++) { %>
+            <h5 class="inline-block px-2 py-1 mx-2 my-1 rounded bg-red-200 text-red-600 border border-red-400">
+            <%= messages.error[i] %>
+            </h5>        
         <% } %>
-    </ul>
-</div>
+        <% } %>
+
+    </div>
+    </div>
+
+
+</body>
+
+</html>
