--- a/todo-app/views/signup.ejs
+++ b/todo-app/views/signup.ejs
@@ -18,6 +18,13 @@
         <div class="col-start-3 col-span-2">
             <%- include('header.ejs') %>
             <h6 class="py-4">Signup as a new user</h6>
+            <% if(messages && messages.error && messages.error.length > 0)  { %>
+                <% for(var i=0; i<messages.error.length; i++) { %>
+                  <h5 class="inline-block px-2 py-1 mx-2 my-1 rounded bg-red-200 text-red-600 border border-red-400">
+                    <%= messages.error[i] %>
+                  </h5>        
+                <% } %>
+              <% } %>
             <form action="/users" method="post">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <div class="py-3">
@@ -30,23 +37,16 @@
                 </div>
                 <div class="py-3">
                     <label>Email:</label>
-                    <input type="email" name="email" placeholder="abcd@email.com" class="border border-red-300 rounded text-gray-900 w-full p-2">
+                    <input type="email" name="email" placeholder="abcd@email.com" class="border border-red-300 rounded text-gray-900 w-full p-2" required>
                 </div>
                 <div class="py-3">
                     <label>Password:</label>
-                    <input type="password" name="password" placeholder="password" class="border border-red-300 rounded text-gray-900 w-full p-2" required>
+                    <input type="password" name="password" placeholder="password" class="border border-red-300 rounded text-gray-900 w-full p-2">
                 </div>
                 <div class="py-3">
                     <button type="submit" class="bg-red-600 hover:bg-red-800 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2">Sign up</button>
                 </div>
              </form>
-             <% if(messages && messages.error && messages.error.length > 0)  { %>
-                <% for(var i=0; i<messages.error.length; i++) { %>
-                  <h5 class="inline-block px-2 py-1 mx-2 my-1 rounded bg-red-200 text-red-600 border border-red-400">
-                    <%= messages.error[i] %>
-                  </h5>        
-                <% } %>
-              <% } %>
         </div>
     </div>
 </body>
